--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.259.0",
     "next": "^13.4.9",
+    "next-themes": "^0.2.1",
     "postcss": "^8.4.25",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.0",
@@ -59,11 +60,12 @@
     "eslint-config-next": "^13.4.9",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react": "^7.33.0",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "volta": {
-    "node": "18.16.1"
+    "node": "18.17.0"
   },
   "packageManager": "pnpm@8.6.0"
 }
