--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "^7.33.0",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0"
+    "prettier-plugin-tailwindcss": "^0.3.0",
+    "ts-node": "^10.9.1"
   },
   "volta": {
     "node": "18.17.0"
