--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -39,7 +40,10 @@
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.259.0",
+    "mobx": "^6.10.0",
+    "mobx-react-lite": "^4.0.3",
     "next": "^13.4.9",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.25",
