--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fingerprintjs/fingerprintjs": "^4.0.1",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-avatar": "^1.0.3",
@@ -57,6 +58,7 @@
     "tailwindcss": "^3.3.2",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "^5.1.6",
+    "ua-parser-js": "^1.0.35",
     "zod": "^3.21.4",
     "zustand": "^4.3.9"
   },
@@ -69,6 +71,7 @@
     "@storybook/nextjs": "7.3.2",
     "@storybook/react": "7.3.2",
     "@storybook/testing-library": "0.2.0",
+    "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
