--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@fingerprintjs/fingerprintjs": "^4.0.1",
+    "@fingerprintjs/fingerprintjs": "^4.1.0",
     "@hookform/resolvers": "^3.3.1",
-    "@radix-ui/react-alert-dialog": "^1.0.4",
-    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-context-menu": "^2.1.4",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.3",
-    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.0.6",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@types/js-cookie": "^3.0.4",
-    "@types/node": "^20.6.2",
-    "@types/react": "^18.2.21",
+    "@types/node": "^20.6.5",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
@@ -42,16 +42,17 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.279.0",
-    "next": "^13.4.19",
+    "next": "^13.5.3",
     "next-themes": "^0.2.1",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.30",
     "react": "^18.2.0",
     "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.46.1",
+    "react-hook-form": "^7.46.2",
     "react-hot-toast": "^2.4.1",
-    "sharp": "^0.32.5",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
@@ -62,11 +63,11 @@
   },
   "devDependencies": {
     "@types/ua-parser-js": "^0.7.37",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^13.4.19",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.3",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-react": "^7.33.2",
@@ -75,7 +76,7 @@
     "ts-node": "^10.9.1"
   },
   "volta": {
-    "node": "18.17.1"
+    "node": "18.18.0"
   },
   "packageManager": "pnpm@8.7.0"
 }
