fix: login button

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,9 @@ yarn-error.log*
 
 # local env files
 .env
+.env.development
+.env.stage
+.env.production
 .development.env
 .stage.env
 .production.env
