--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development && next dev",
+    "dev": "cross-env NODE_ENV=development next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -73,7 +73,7 @@
     "tailwindcss": "^3.3.3"
   },
   "volta": {
-    "node": "18.18.0"
+    "node": "18.18.2"
   },
-  "packageManager": "pnpm@8.7.0"
+  "packageManager": "pnpm@8.9.0"
 }
