--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "cmdk": "^0.2.0",
     "cookies-next": "^4.1.0",
     "date-fns": "^2.30.0",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.292.0",
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
+    "npm": "^10.2.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
@@ -72,7 +74,7 @@
     "tailwindcss": "^3.3.5"
   },
   "volta": {
-    "node": "18.18.2"
+    "node": "20.9.0"
   },
   "packageManager": "pnpm@8.9.0"
 }
