--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "saas-community",
-  "version": "0.1.0",
+  "name": "lastation-client",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev",
@@ -29,8 +29,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.8.4",
-    "@tanstack/react-query-devtools": "^5.8.4",
+    "@tanstack/react-query": "^5.8.7",
+    "@tanstack/react-query-devtools": "^5.8.7",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -39,7 +39,7 @@
     "date-fns": "^2.30.0",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.292.0",
+    "lucide-react": "^0.293.0",
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
     "npm": "^10.2.4",
@@ -52,16 +52,16 @@
     "sharp": "^0.32.6",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
-    "@types/node": "^20.9.1",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@types/node": "^20.10.0",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
     "eslint": "^8.54.0",
@@ -74,7 +74,7 @@
     "tailwindcss": "^3.3.5"
   },
   "volta": {
-    "node": "20.9.0"
+    "node": "20.10.0"
   },
   "packageManager": "pnpm@8.9.0"
 }
