FIX: url information

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lastation-client",
+  "name": "v-tracer-client",
   "version": "0.1.5",
   "private": true,
   "description": "lastation WEB Client",
