--- a/package.json
+++ b/package.json
@@ -30,49 +30,49 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.18.1",
-    "@tanstack/react-query-devtools": "^5.18.1",
-    "axios": "^1.6.7",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-query-devtools": "^5.29.2",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "cmdk": "^0.2.1",
+    "cmdk": "^1.0.0",
     "cookies-next": "^4.1.1",
-    "date-fns": "^3.3.1",
+    "date-fns": "^3.6.0",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.323.0",
-    "next": "^14.1.0",
-    "next-themes": "^0.2.1",
-    "postcss": "^8.4.34",
+    "lucide-react": "^0.368.0",
+    "next": "^14.2.0",
+    "next-themes": "^0.3.0",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
     "rimraf": "^5.0.5",
-    "sharp": "^0.33.2",
+    "sharp": "^0.33.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.5",
     "zod": "^3.22.4",
-    "zustand": "^4.5.0"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@types/node": "^20.11.16",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "autoprefixer": "^10.4.17",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.77",
+    "@types/react-dom": "^18.2.25",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "5.1.3",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.4.1"
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss": "^3.4.3"
   },
   "volta": {
     "node": "20.11.0"
