--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "date-fns": "^3.6.0",
     "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.368.0",
-    "next": "^14.2.0",
+    "lucide-react": "^0.372.0",
+    "next": "^14.2.2",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
-    "react-day-picker": "^8.10.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
@@ -53,24 +53,24 @@
     "sharp": "^0.33.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
-    "zod": "^3.22.4",
+    "zod": "^3.22.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.77",
+    "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "^14.2.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3"
   },
