--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "sharp": "^0.33.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5",
+    "uuid": "^9.0.1",
     "zod": "^3.22.5",
     "zustand": "^4.5.2"
   },
@@ -60,6 +61,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "autoprefixer": "^10.4.19",
